# Collector

./: .env.example  .gitignore  Dockerfile  README.md  celeryconfig.py  push_data.py  pyproject.toml  run.sh  stop.sh  temp.py
src/: __init__.py  app.py  config.py  generator.py  models.py  setup_logging.py  tasks.py  ticker_id.py  url.py
src/database/: __init__.py  models.py  service.py
src/database/models/: __init__.py  base.py  cryptocourse.py  cryptocurrency.py  fiat.py
