[tool.poetry]
name = "cryptodeal-collector"
version = "0.1.0"
description = "Collects data for CryptoDeal"
authors = ["LaryStef <timurkotov1999@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.4.0"
pydantic = "^2.8.2"
redis = "^5.0.8"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
